<resources>
    <string name="app_name">Konverter Numeralia</string>

    <string name="intro">Aplikasi ini merupakan aplikasi converter sederhana yang akan mengeluarkan output dalam bentuk numeralia. </string>
    <string name="contoh_1">min: 0, maks: 9999</string>

    <string name="hasil">Hasilnya adalah:</string>
    <string name="hasil_x">Hasilnya adalah: \n\n %1$s</string>

    <string name="invalid_bil">Tolong input angkanya dengan benar</string>
    <string name="invalid_bil2">Tolong input angkanya dalam range yang benar</string>
    <string name="button_konversi">Konversi</string>

    <string name="error_msg">Maaf error, ada yang salah</string>

    <string name="se">se</string>
    <string name="nol">nol</string>
    <string name="satu">satu</string>
    <string name="dua">dua</string>
    <string name="tiga">tiga</string>
    <string name="empat">empat</string>
    <string name="lima">lima</string>
    <string name="enam">enam</string>
    <string name="tujuh">tujuh</string>
    <string name="delapan">delapan</string>
    <string name="sembilan">sembilan</string>

    <string name="belas">belas</string>
    <string name="puluh">puluh</string>
    <string name="ratus">ratus</string>
    <string name="ribu">ribu</string>

    <string name="helper_bil">Masukan 4 digit angka untuk di konversi</string>

    <string name="light_theme">Tema Terang</string>
    <string name="dark_theme">Tema Gelap</string>

    <string name="belum_ada_data">Belum ada data</string>

    <string name="copyright">Aplikasi ini merupakan aplikasi converter sederhana yang akan mengeluarkan output dalam bentuk numeralia.
        \n\nAplikasi hanya dapat memproses input dengan range 0 - 9999, lebih tepatnya inputan 4 digit angka
        \n\nRepository Github: https://github.com/gidachmad/mobpro-assesment1-konverterNumeralia.git\n\n\nCopyright © 2022 Gid AAF.\nAll rights reserved.  </string>


    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="histori">Histori</string>
    <string name="hapus_histori_all">Hapus Semua Histori</string>
    <string name="hapus_histori">Hapus Item Histori</string>

    <string name="hasil_histori">%1$s</string>
    <string name="konfirmasi_hapus_all">Yakin hapus semua?</string>
    <string name="konfirmasi_hapus">Yakin hapus item ini?</string>

    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>

    <string name="switch_layout">Ubah layout</string>

    <string name="channel_name"> Updater </string>
    <string name="channel_desc"> Update Notif untuk Konverter</string>
    <string name="notif_title"> Terimakasih telah melakukan konversi!!</string>
    <string name="notif_text">Anda bisa cek histori konversi anda sekarang dengan klik menu di bagian kanan atas!! </string>

</resources>