<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/intro"
            android:justificationMode="inter_word"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_1_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/intro"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:helperTextEnabled="true"
            app:helperText="@string/helper_bil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contoh_1"
                android:inputType="number"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/input_1_hint"
            app:layout_constraintTop_toBottomOf="@id/input_1_hint"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/button_konversi">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/submit_button"
            android:layout_marginTop="16dp"
            app:dividerColor="?attr/colorPrimary">
        </com.google.android.material.divider.MaterialDivider>

        <TextView
            android:id="@+id/hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil"
            app:layout_constraintTop_toBottomOf="@id/divider_2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:justificationMode="inter_word"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>